--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "author": "Christopher Small",
   "license": "ISC",
   "dependencies": {
+    "highlight.js": "11.1.0",
+    "marked": "1.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "vega": "5.17.0",
-    "vega-lite": "4.17.0",
-    "vega-util": "1.16.0",
-    "vega-embed": "6.12.2",
     "vega-canvas": "1.2.6",
-    "marked": "1.2.5"
+    "vega-cli": "^5.20.2",
+    "vega-embed": "6.12.2",
+    "vega-lite": "4.17.0",
+    "vega-util": "1.16.0"
   },
   "devDependencies": {
     "create-react-class": "15.6.3",
