--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "author": "Christopher Small",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.8.0",
     "highlight.js": "11.1.0",
     "marked": "1.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "vega": "5.21.0",
+    "vega": "5.20.0",
     "vega-canvas": "1.2.6",
-    "vega-cli": "^5.21.0",
-    "vega-embed": "6.20.0",
-    "vega-lite": "5.1.1",
-    "vega-util": "1.17.0"
+    "vega-cli": "5.21.0",
+    "vega-embed": "6.12.2",
+    "vega-lite": "5.1.0",
+    "vega-util": "1.16.0"
   },
   "devDependencies": {
     "create-react-class": "15.7.0",
